--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       // tombol cekpoin ditekan
       pinButton.forEach((i, f) => {
         i.addEventListener("click", (e) => {
-          if(startButton.style.display != "none"){
+          if(startButton.style.display == "none"){
             i.innerHTML == "Finish" ? finishButton(f) : console.log();
             cekText[f].innerHTML +=
               i.innerHTML == "Finish"
