--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       * {
         font-family: "Open Sans", sans-serif;
       }
+      ::-webkit-scrollbar {
+        display: none;
+      }
       .bod {
         background-color: #173645;
         background-image: url("pattern.svg");
