--- a/index.html
+++ b/index.html
@@ -76,9 +76,37 @@
                 style="background-color: #173645; border: none; color: white"
               >
                 <option>Nama Tim</option>
-                <option value="Bleged">Bleged</option>
-                <option value="Bleged">B</option>
-                <option value="Bleged">C</option>
+                <option value="Artic Orion">Artic Orion</option>
+                <option value="Artic Orions">Artic Orions</option>
+                <option value="AZTEK">AZTEK</option>
+                <option value="Cukurukuk">Cukurukuk</option>
+                <option value="Elfath Robotic">Elfath Robotic</option>
+                <option value="Ganesis">Ganesis</option>
+                <option value="Ichibot Zed">Ichibot Zed</option>
+                <option value="Magnum Saber">Magnum Saber</option>
+                <option value="Manduwo_Robo">Manduwo_Robo</option>
+                <option value="ManggaTech">ManggaTech</option>
+                <option value="Marbot">Marbot</option>
+                <option value="RAYDEN">RAYDEN</option>
+                <option value="RR Arepo">RR Arepo</option>
+                <option value="RR Blacksweet">RR Blacksweet</option>
+                <option value="RR Cipunk">RR Cipunk</option>
+                <option value="RR FDW">RR FDW</option>
+                <option value="RR Itachi">RR Itachi</option>
+                <option value="RR Kenzzz">RR Kenzzz</option>
+                <option value="RR MADU HITAM">RR MADU HITAM</option>
+                <option value="RR MUKIDI">RR MUKIDI</option>
+                <option value="RR NEXUS">RR NEXUS</option>
+                <option value="RR Trial Driver">RR Trial Driver</option>
+                <option value="RR Trifecta">RR Trifecta</option>
+                <option value="RR VENDETA">RR VENDETA</option>
+                <option value="RR YKZ">RR YKZ</option>
+                <option value="RR YuDeX">RR YuDeX</option>
+                <option value="RR ZEUS">RR ZEUS</option>
+                <option value="TeroMangga">TeroMangga</option>
+                <option value="Wanayya Racing Team">Wanayya Racing Team</option>
+                <option value="YPF Royale">YPF Royale</option>
+                <option value="ZERO'">ZERO'</option>
               </select>
               <p style="font-size: 70pt" class="timeStop">00 : 00 : 00</p>
             </div>
@@ -99,9 +127,37 @@
                 style="background-color: #173645; border: none; color: white"
               >
                 <option>Nama Tim</option>
-                <option value="Voit">Voit</option>
-                <option value="Voit">B</option>
-                <option value="Voit">C</option>
+                <option value="Artic Orion">Artic Orion</option>
+                <option value="Artic Orions">Artic Orions</option>
+                <option value="AZTEK">AZTEK</option>
+                <option value="Cukurukuk">Cukurukuk</option>
+                <option value="Elfath Robotic">Elfath Robotic</option>
+                <option value="Ganesis">Ganesis</option>
+                <option value="Ichibot Zed">Ichibot Zed</option>
+                <option value="Magnum Saber">Magnum Saber</option>
+                <option value="Manduwo_Robo">Manduwo_Robo</option>
+                <option value="ManggaTech">ManggaTech</option>
+                <option value="Marbot">Marbot</option>
+                <option value="RAYDEN">RAYDEN</option>
+                <option value="RR Arepo">RR Arepo</option>
+                <option value="RR Blacksweet">RR Blacksweet</option>
+                <option value="RR Cipunk">RR Cipunk</option>
+                <option value="RR FDW">RR FDW</option>
+                <option value="RR Itachi">RR Itachi</option>
+                <option value="RR Kenzzz">RR Kenzzz</option>
+                <option value="RR MADU HITAM">RR MADU HITAM</option>
+                <option value="RR MUKIDI">RR MUKIDI</option>
+                <option value="RR NEXUS">RR NEXUS</option>
+                <option value="RR Trial Driver">RR Trial Driver</option>
+                <option value="RR Trifecta">RR Trifecta</option>
+                <option value="RR VENDETA">RR VENDETA</option>
+                <option value="RR YKZ">RR YKZ</option>
+                <option value="RR YuDeX">RR YuDeX</option>
+                <option value="RR ZEUS">RR ZEUS</option>
+                <option value="TeroMangga">TeroMangga</option>
+                <option value="Wanayya Racing Team">Wanayya Racing Team</option>
+                <option value="YPF Royale">YPF Royale</option>
+                <option value="ZERO'">ZERO'</option>
               </select>
               <p style="font-size: 70pt" class="timeStop">00 : 00 : 00</p>
             </div>
